--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -30,66 +30,17 @@ spring.simple.maxWaitMillis=3000
 spring.simple.maxIdle=10
 ##连接超时时间
 spring.simple.timeout=3000
-#dubbo
-# dubbo-provider.properties
-spring.simple.dubbo.application.name=simple-developmen
-spring.simple.dubbo.registry.address=zookeeper://127.0.0.1:2181
-spring.simple.dubbo.protocol.name=dubbo
-spring.simple.dubbo.protocol.port=20880
-
-#elastic search
-#elasticsearch地址
-spring.simple.elasticsearch.host=172.22.5.214
-#elasticsearch端口
-spring.simple.elasticsearch.port=9300
-#elasticsearch集群
-spring.simple.elasticsearch.cluster.name=elasticsearch
-
-#xxl job
-#执行器注册中心地址
-spring.simple.xxl.job.addresses=http://172.22.5.243:8080
-#执行器AppName
-spring.simple.xxljob.appName=simple-demo-executor
-#执行器Ip
-spring.simple.xxljob.ip=172.22.5.129
-#执行器端口号
-spring.simple.xxljob.port=9999
-
-
-#spring.simple.swagger.is_enable=true
-
-#cassandra
-spring.simple.cassandra.cassandraPackage=com.spring.simple.development.demo
-spring.simple.cassandra.cassandraName=acsCluster
-spring.simple.cassandra.address=172.22.5.246
-spring.simple.cassandra.port=9042
-spring.simple.cassandra.keySpaces.name=acs
-spring.simple.cassandra.userName=root
-spring.simple.cassandra.password=123456
 
 #alert
-spring.simple.alert.url=http://www.baidu.com
-spring.simple.alert.applicationCode=xxx
-spring.simple.alert.applicationToken=xxx
-spring.simple.alert.logPath=E:/alert
-
-#kafka
-spring.simple.kafka.bootstrap.servers=172.22.5.245:9092
-
-#shiro
-spring.simple.shiro.isOpen=false
-spring.simple.shiro.skipauthenticate=false
-spring.simple.shiro.successurl=http://192.168.0.10:8000/index
-spring.simple.shiro.unauthorizedurl=http://192.168.0.10:8000/noPermission
-spring.simple.shiro.bizsiteurlprefix=http://192.168.0.10:8000
-spring.simple.shiro.casserverurlprefix=http://192.168.0.10:8080
-spring.simple.shiro.redis_host=172.22.5.243
-spring.simple.shiro.redis_port=6379
-spring.simple.shiro.redis.database=0
-spring.simple.shiro.redis.password=123456
+application.alert.is.open=true
+spring.simple.alert.url=http://172.22.5.245:8002/data/api/receivedAlertMessage
+spring.simple.alert.applicationCode=platformWeb
+spring.simple.alert.applicationToken=iUDvnOh1QHtibQt8
+spring.simple.alert.logPath=/data/alert/operator-platform
 
 #dataprocess
 spring.simple.mybatis.data.process=true
+
 #swagger
 spring.simple.swagger.is_enable=true
 
