--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 #数据源基础信息
 spring.simple.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.simple.datasource.url=jdbc:mysql://172.22.5.243:3306/insurance?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&serverTimezone=CTT
@@ -37,9 +38,6 @@ spring.simple.alert.url=http://172.22.5.245:8002/data/api/receivedAlertMessage
 spring.simple.alert.applicationCode=platformWeb
 spring.simple.alert.applicationToken=iUDvnOh1QHtibQt8
 spring.simple.alert.logPath=/data/alert/operator-platform
-
-#dataprocess
-spring.simple.mybatis.data.process=true
 
 #swagger
 spring.simple.swagger.is_enable=true
