脚本执行模块

--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -44,3 +44,13 @@ spring.simple.swagger.is_enable=true
 
 
 
+# simple-job, access token
+spring.simple.job.accessToken=
+# simple-job, triggerpool max size
+spring.simple.job.triggerpool.fast.max=200
+spring.simple.job.triggerpool.slow.max=100
+# simple-job, log retention days
+spring.simple.job.logretentiondays=30
+
+
+
