--- a/fastgo-server/pom.xml
+++ b/fastgo-server/pom.xml
@@ -9,9 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bee.team</groupId>
     <artifactId>fastgo-server</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.bee.team</groupId>
+            <artifactId>fastgo-job-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
