--- a/fastgo-project/pom.xml
+++ b/fastgo-project/pom.xml
@@ -9,8 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.bee.team</groupId>
     <artifactId>fastgo-project</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
+
 
 </project>
