--- a/fastgo-project/pom.xml
+++ b/fastgo-project/pom.xml
@@ -14,5 +14,11 @@
     <packaging>jar</packaging>
     <version>1.0</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.spring</groupId>
+            <artifactId>simple-development-code-generate</artifactId>
+            <version>3.0</version>
+        </dependency>
+    </dependencies>
 </project>
