--- a/fastgo-project/pom.xml
+++ b/fastgo-project/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>simple-development-code-generate</artifactId>
             <version>3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.bee.team</groupId>
+            <artifactId>fastgo-common</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
