--- a/fastgo-server/pom.xml
+++ b/fastgo-server/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>fastgo-job-core</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.bee.team</groupId>
+            <artifactId>fastgo-common</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
