--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 #数据源基础信息
 spring.simple.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.simple.datasource.url=jdbc:mysql://172.22.5.243:3306/insurance?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&serverTimezone=CTT
+spring.simple.datasource.url=jdbc:mysql://172.22.5.248:3306/fastgo?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&serverTimezone=CTT
 spring.simple.datasource.username=root
 spring.simple.datasource.password=123456
 #连接池配置
