--- a/fastgo-config/src/main/resources/application.properties
+++ b/fastgo-config/src/main/resources/application.properties
@@ -1,16 +1,6 @@
-server.port=9002
-#swagger
-spring.simple.swagger.is_enable=true
-#mongoDB
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host=172.22.5.247
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=fastconfig
-spring.data.mongodb.username=tladmin
-spring.data.mongodb.password=123456
-
-
-
-
-
-
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.host=172.22.5.247
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=fastconfig
+#spring.data.mongodb.username=tladmin
+#spring.data.mongodb.password=123456
