--- a/fastgo-web/pom.xml
+++ b/fastgo-web/pom.xml
@@ -34,6 +34,16 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
