--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -40,5 +40,12 @@ spring.simple.job.triggerpool.slow.max=100
 # simple-job, log retention days
 spring.simple.job.logretentiondays=30
 
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=172.22.5.247
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=fastconfig
+spring.data.mongodb.username=tladmin
+spring.data.mongodb.password=123456
+
 
 
