--- a/fastgo-web/pom.xml
+++ b/fastgo-web/pom.xml
@@ -29,6 +29,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>com.bee.team</groupId>
+            <artifactId>fastgo-tools</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
