--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -47,5 +47,7 @@ spring.data.mongodb.database=fastconfig
 spring.data.mongodb.username=tladmin
 spring.data.mongodb.password=123456
 
+gitlab.url=http://172.22.5.242
+
 
 
