上传本地代码到gitlab

--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -40,7 +40,15 @@ spring.data.mongodb.database=fastconfig
 spring.data.mongodb.username=tladmin
 spring.data.mongodb.password=123456
 
+#gitlab
 gitlab.url=http://172.22.5.242
+gitlab.username=xiaohushuang
+gitlab.password=hs19971125
+
+#前端项目地址
+frontTemplate=/data/project/frontTemplate
+
+
 
 
 
