--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -49,6 +49,8 @@ gitlab.password=hs19971125
 frontTemplate=/data/project/frontTemplate
 
 
+#deploy 自动部署
+fastgo.project.path=/data/fastgo/deploy/
 
 
 
