--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -33,6 +33,7 @@ spring.simple.job.triggerpool.fast.max=200
 spring.simple.job.triggerpool.slow.max=100
 # simple-job, log retention days
 spring.simple.job.logretentiondays=30
+#mongodb
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.host=172.22.5.247
 spring.data.mongodb.port=27017
