--- a/fastgo-job/fastgo-job-client/src/main/resources/application.properties
+++ b/fastgo-job/fastgo-job-client/src/main/resources/application.properties
@@ -24,3 +24,5 @@ simple.job.executor.port=9999
 simple.job.executor.logpath=/data/fastgo/simple-job/
 ### simple-job executor log-retention-days
 simple.job.executor.logretentiondays=30
+
+save_server_monitor_url = http://172.22.5.248:9999/api/monitor/saveServerMonitorInfo
