新增项目接口

--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -52,6 +52,8 @@ frontTemplate=/data/fastgo/frontTemplate/
 #项目文件存放地址
 projectUrl=/data/fastgo/
 
+#项目公用文件地址
+project.publicTemplate=/data/fastgo/publicTemplate
 
 #deploy 自动部署
 fastgo.project.path=/data/fastgo/deploy/
