--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -55,8 +55,8 @@ projectUrl=/data/fastgo/
 
 #deploy 自动部署
 fastgo.project.path=/data/fastgo/deploy/
-java.home=
-maven.home=
+java.home=/data/jdk/jdk1.8.0_191/
+maven.home=/data/apache-maven-3.6.1/
 
 
 
