vue 项目自动部署

--- a/fastgo-tools/pom.xml
+++ b/fastgo-tools/pom.xml
@@ -48,5 +48,11 @@
             <artifactId>ganymed-ssh2</artifactId>
             <version>262</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.12</version>
+        </dependency>
     </dependencies>
 </project>
