文件上传与下载 xqx

--- a/fastgo-web/pom.xml
+++ b/fastgo-web/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>simple-development-code-generate</artifactId>
             <version>3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.2.7.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
