--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -40,25 +40,26 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=fastconfig
 spring.data.mongodb.username=tladmin
 spring.data.mongodb.password=123456
-
 #gitlab
 gitlab.url=http://172.22.5.242
 gitlab.username=xiaohushuang
 gitlab.password=hs19971125
-
 #前端项目地址
 frontTemplate=/data/fastgo/frontTemplate/
-
 #项目文件存放地址
 projectUrl=/data/fastgo/
-
 #项目公用文件地址
 project.publicTemplate=/data/fastgo/publicTemplate
-
 #deploy 自动部署
 fastgo.project.path=/data/fastgo/deploy/
 java.home=/data/jdk/jdk1.8.0_191/
 maven.home=/data/apache-maven-3.6.1/
+#静态资源路径
+server.file.root.parh=/data/soft/
+server.file.pattern.path=/archive/**
+spring.http.multipart.enabled=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1000MB
 
 
 
