--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -55,8 +55,8 @@ fastgo.project.path=/data/fastgo/deploy/
 java.home=/data/jdk/jdk1.8.0_191/
 maven.home=/data/apache-maven-3.6.1/
 #静态资源路径
-server.file.root.parh=/data/soft/
-server.file.pattern.path=/archive/**
+server.file.root.parh=/data/fastgo/sources
+server.file.pattern.path=/fastgo/**
 spring.http.multipart.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1000MB
