修改文件上传路径 xqx

--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -57,9 +57,11 @@ maven.home=/data/apache-maven-3.6.1/
 #静态资源路径
 server.file.root.parh=/data/fastgo/sources/
 server.file.pattern.path=/fastgo/**
+server.file.static.path=/fastgo/
 spring.http.multipart.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1000MB
+
 
 
 
