--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -21,8 +21,8 @@ spring.simple.datasource.testOnReturn=false
 #alert
 application.alert.is.open=true
 spring.simple.alert.url=http://172.22.5.245:8002/data/api/receivedAlertMessage
-spring.simple.alert.applicationCode=platformWeb
-spring.simple.alert.applicationToken=iUDvnOh1QHtibQt8
+spring.simple.alert.applicationCode=fastgo
+spring.simple.alert.applicationToken=fastgoToken
 spring.simple.alert.logPath=/data/alert/fastgo
 #swagger
 spring.simple.swagger.is_enable=true
