--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -27,7 +27,7 @@ spring.simple.alert.logPath=/data/alert/fastgo
 #swagger
 spring.simple.swagger.is_enable=true
 # simple-job, access token
-spring.simple.job.accessToken=ProjectBoImpl
+spring.simple.job.accessToken=
 # simple-job, triggerpool max size
 spring.simple.job.triggerpool.fast.max=200
 spring.simple.job.triggerpool.slow.max=100
