--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -61,6 +61,8 @@ server.file.static.path=/fastgo/
 spring.http.multipart.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1000MB
+#数据库sql文件
+mysql.fileAddr=/data/fastgo/mysqlDataSource/
 
 
 
