--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -44,6 +44,7 @@ spring.data.mongodb.password=123456
 gitlab.url=http://172.22.5.242
 gitlab.username=xiaohushuang
 gitlab.password=hs19971125
+gitlab.privateToken=n5_nL3oQUj_3wAZaQKC6
 #前端项目地址
 frontTemplate=/data/fastgo/frontTemplate/
 #项目文件存放地址
