--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -52,6 +52,7 @@ projectUrl=/data/fastgo/
 project.publicTemplate=/data/fastgo/publicTemplate
 #deploy 自动部署
 fastgo.project.path=/data/fastgo/deploy/
+fastgo.project.logs.path=/data/fastgo/deploy/logs
 java.home=/data/jdk/jdk1.8.0_191/
 maven.home=/data/apache-maven-3.6.1/
 #静态资源路径
