--- a/fastgo-web/pom.xml
+++ b/fastgo-web/pom.xml
@@ -59,6 +59,22 @@
             <artifactId>jsch</artifactId>
             <version>0.1.54</version>
         </dependency>
+        <dependency>
+            <groupId>com.dingtalk-chatbot-sdk</groupId>
+            <artifactId>dingtalk-chatbot-sdk</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dingtalk-chatbot-sdk-sources</groupId>
+            <artifactId>dingtalk-chatbot-sdk-sources</artifactId>
+            <version>0.9.0</version>
+            <classifier>sources</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>taobao-sdk-java-auto</artifactId>
+            <version>20181204</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
