用户过滤器实现

--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -67,6 +67,8 @@ spring.servlet.multipart.max-file-size=1000MB
 #数据库sql文件
 mysql.fileAddr=/data/fastgo/mysqlDataSource/
 
+application.user.login.is.open=true
+
 
 
 
