--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -42,8 +42,8 @@ spring.data.mongodb.username=tladmin
 spring.data.mongodb.password=123456
 #gitlab
 gitlab.url=http://172.22.5.242
-gitlab.username=xiaohushuang
-gitlab.password=hs19971125
+gitlab.username=root
+gitlab.password=restart@2020
 gitlab.admin.privateToken=RBzGMZmKyWRV7y_K4bpJ
 gitlab.normal.privateToken=n5_nL3oQUj_3wAZaQKC6
 #前端项目地址
