用户登录组件

--- a/fastgo-web/src/main/resources/config/dev/application.properties
+++ b/fastgo-web/src/main/resources/config/dev/application.properties
@@ -66,7 +66,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1000MB
 #数据库sql文件
 mysql.fileAddr=/data/fastgo/mysqlDataSource/
-
+#用户登录组件
 application.user.login.is.open=true
 
 
